package com.example.vending_machine_simulator.models;

import java.io.Serializable;

public class BaseObject implements Serializable {
}
