package com.example.vending_machine_simulator.models.enums;

public enum ProcessState {
    START,
    SELECT_ITEM,
    INSERT_MONEY,
    DISPENSE_ITEM,
    RETURN_CHANGE,
    EXIT
}
